--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -13,6 +13,7 @@
   @media (min-width: $vp-768) {
     display: flex;
     justify-content: space-between;
+    gap: 20px;
     margin: 44px auto 47px;
   }
 }
@@ -76,6 +77,7 @@
   display: flex;
   flex-direction: column;
   gap: 14px;
+  flex-wrap: wrap;
   list-style-type: none;
 
   &:last-of-type {
@@ -106,14 +108,20 @@
     font-weight: 400;
     line-height: normal;
     position: relative;
+    transition: $trans-default;
 
     @media (min-width: $vp-768) {
       font-size: 14px;
     }
 
-    &:hover {
-      padding-bottom: 5px;
-      border-bottom: 1px solid $color-default-white;
+    &:hover::after {
+      position: absolute;
+      content: "";
+      bottom: -5px;
+      left: 0;
+      width: 100%;
+      height: 1px;
+      background-color: $color-default-white;
     }
 
     &:focus-visible {
@@ -133,6 +141,7 @@
   padding-top: 34px;
   list-style-type: none;
   display: flex;
+  flex-wrap: wrap;
   gap: 11px;
 
   @media (min-width: $vp-768) {
