--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -27,6 +27,7 @@ $dark-grey: #74819c;
 
 $black-to-right: linear-gradient(90deg, rgba(0, 0, 0, 0.75) 0%, rgba(0, 0, 0, 0) 75%);
 $red-blue-right: linear-gradient(90deg, #d10a42, #00359f);
+$red-blue-right-bottom: linear-gradient(to right bottom, #d10a42, #00359f);
 
 // Typography
 // ---------------------------------
