--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -63,7 +63,7 @@
   position: relative;
   flex-direction: column;
   padding: 0;
-  align-items: center;
+  align-items: start;
   gap: 5px;
 
   @media (min-width: $vp-768) {
@@ -76,13 +76,17 @@
 .features__wrapper {
   align-self: center;
 
+  @media (min-width: $vp-768) {
+    align-self: start;
+  }
+
   h4 {
     margin: 0;
     padding: 0;
     font-size: 58px;
     font-weight: 700;
     line-height: 90%;
-    background: $red-blue-right;
+    background: linear-gradient(129deg, #d10a42 0%, #0041ca 100%);
     background-clip: text;
     -webkit-text-fill-color: transparent;
 
@@ -96,7 +100,7 @@
     @media (min-width: $vp-1200) {
       font-size: 71px;
       font-weight: 700;
-      margin-top: -13px;
+      margin-top: 3px;
     }
   }
 
@@ -163,6 +167,10 @@
   grid-row-start: 3;
   padding: 40px 30px 47px;
   text-align: center;
+
+  .features__wrapper {
+    align-self: center;
+  }
 
   @media (min-width: $vp-768) {
     flex-direction: column;
