--- a/source/sass/blocks/gym.scss
+++ b/source/sass/blocks/gym.scss
@@ -118,9 +118,16 @@
   }
 }
 
+.main-gym__block {
+  @media (min-width: $vp-768) {
+    display: flex;
+    justify-content: center;
+  }
+}
+
 .main-gym__photo {
   display: block;
-  width: 100vh;
+  width: 100vw;
   margin-bottom: 40px;
 
   @media (min-width: $vp-768) {
@@ -136,10 +143,17 @@
 }
 
 .main-gym__video {
+  position: relative;
+  left: 50%;
+  transform: translate(-50%, 0);
+  width: 320px;
+  height: 228px;
+
   @media (min-width: $vp-768) {
     position: absolute;
     bottom: 101px;
-    left: 251px;
+    left: 50%;
+    transform: translate(-50%, 0);
     width: 266px;
     height: 167px;
   }
