--- a/source/sass/blocks/main-banner.scss
+++ b/source/sass/blocks/main-banner.scss
@@ -169,9 +169,9 @@
   text-transform: uppercase;
   border: 4px solid $color-default-white;
   text-align: center;
-  white-space: nowrap;
   transition: $trans-default;
   user-select: none;
+  white-space: pre-wrap;
 
   &:hover,
   &:focus-visible {
