--- a/css/style.css
+++ b/css/style.css
@@ -1723,11 +1723,13 @@ button,
   margin: 0;
   padding: 0;
   color: #ffffff;
-  font-size: 15px;
+  font-family: "Alumni Sans", "Arial", sans-serif;
+  font-size: 20px;
   font-style: normal;
   font-weight: 600;
   line-height: normal;
-  letter-spacing: 0.78px;
+  letter-spacing: 0.4px;
+  margin-top: -2px;
 }
 
 .footer {
@@ -1763,6 +1765,8 @@ button,
   -ms-flex-direction: column;
   flex-direction: column;
   gap: 14px;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
   list-style-type: none;
 }
 
@@ -1777,11 +1781,18 @@ button,
   font-weight: 400;
   line-height: normal;
   position: relative;
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
 }
 
-.footer__item a:hover {
-  padding-bottom: 5px;
-  border-bottom: 1px solid #ffffff;
+.footer__item a:hover::after {
+  position: absolute;
+  content: "";
+  bottom: -5px;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background-color: #ffffff;
 }
 
 .footer__item a:focus-visible {
@@ -1801,6 +1812,8 @@ button,
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
   gap: 11px;
 }
 
@@ -1917,13 +1930,13 @@ button,
   text-transform: uppercase;
   border: 4px solid #ffffff;
   text-align: center;
-  white-space: nowrap;
   -webkit-transition: 0.3s ease;
   transition: 0.3s ease;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  white-space: pre-wrap;
 }
 
 .main-banner__button:hover,
@@ -1991,8 +2004,18 @@ button,
 
 .main-gym__photo {
   display: block;
-  width: 100vh;
+  width: 100vw;
   margin-bottom: 40px;
+}
+
+.main-gym__video {
+  position: relative;
+  left: 50%;
+  -webkit-transform: translate(-50%, 0);
+  -ms-transform: translate(-50%, 0);
+  transform: translate(-50%, 0);
+  width: 320px;
+  height: 228px;
 }
 
 .main-gym__video iframe {
@@ -2073,7 +2096,7 @@ button,
   position: relative;
   background: #f8f9fc;
   padding: 64px 15px;
-  padding-bottom: 97px;
+  padding-bottom: 29px;
 }
 
 .subscription h2 {
@@ -2102,6 +2125,8 @@ button,
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
   gap: 45px;
   list-style-type: none;
   margin-top: 19px;
@@ -2115,7 +2140,7 @@ button,
   position: absolute;
   bottom: 1px;
   width: 290px;
-  height: 1px;
+  height: 2px;
   left: 50%;
   -webkit-transform: translate(-50%, 0);
   -ms-transform: translate(-50%, 0);
@@ -2149,7 +2174,7 @@ button,
   bottom: -11px;
   left: 0;
   width: 100%;
-  height: 1px;
+  height: 2px;
   background-color: #d10a42;
 }
 
@@ -2312,7 +2337,9 @@ button,
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
+  background-color: #ffffff;
   padding-bottom: 66px;
+  padding-top: 69px;
 }
 
 .competition__wrapper {
@@ -2444,11 +2471,17 @@ button,
 .competition__link:hover,
 .competition__link:focus-visible {
   outline: none;
-  opacity: 0.3;
+  background-color: #ffffff;
+  color: #ed0233;
 }
 
 .competition__link:active {
-  color: #102654;
+  background-color: #ffffff;
+  color: #d10a42;
+}
+
+.competition__link:disabled {
+  opacity: 0.3s;
 }
 
 .competition__image {
@@ -2656,9 +2689,9 @@ button,
   -ms-flex-direction: column;
   flex-direction: column;
   padding: 0;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
+  align-items: start;
   gap: 5px;
 }
 
@@ -2674,8 +2707,7 @@ button,
   font-size: 58px;
   font-weight: 700;
   line-height: 90%;
-  background: -webkit-gradient(linear, left top, right top, from(#d10a42), to(#00359f));
-  background: linear-gradient(90deg, #d10a42, #00359f);
+  background: linear-gradient(129deg, #d10a42 0%, #0041ca 100%);
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -2722,6 +2754,12 @@ button,
   grid-row-start: 3;
   padding: 40px 30px 47px;
   text-align: center;
+}
+
+.features__item--center .features__wrapper {
+  -ms-flex-item-align: center;
+  -ms-grid-row-align: center;
+  align-self: center;
 }
 
 .features__item--center p {
@@ -3124,9 +3162,8 @@ button,
 }
 
 .reviews {
-  padding: 62px 0;
+  padding: 62px 0 68px;
   position: relative;
-  padding-bottom: 27px;
   max-width: 700px;
   margin: 0 auto;
 }
@@ -3281,10 +3318,22 @@ button,
   order: 3;
 }
 
+.contacts__item-phone a {
+  display: block;
+  width: 100px;
+}
+
 .contacts__item-email {
   -webkit-box-ordinal-group: 5;
   -ms-flex-order: 4;
   order: 4;
+}
+
+.contacts__item-email a {
+  display: block;
+  white-space: pre-wrap;
+  width: 160px;
+  word-wrap: break-word;
 }
 
 .free-class {
@@ -3320,6 +3369,10 @@ button,
   -ms-flex-pack: justify;
   justify-content: space-between;
   gap: 31px;
+}
+
+.free-class__input-wrapper div {
+  width: 100%;
 }
 
 .free-class__label {
@@ -3411,10 +3464,6 @@ button,
   opacity: 0.3;
 }
 
-.free-class__label input--error {
-  border-color: #ed0233;
-}
-
 .free-class__error-text {
   display: none;
 }
@@ -3440,22 +3489,31 @@ button,
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
+  cursor: pointer;
 }
 
 .free-class__btn:hover,
-.free-class__btn:active,
-.free-class__btn:focus {
-  border: 3px solid #ed0233;
-  color: #ed0233;
+.free-class__btn:focus-visible {
+  outline: none;
+  background-color: #ffffff;
+  color: #103aae;
 }
 
 .free-class__btn:active {
-  border: 3px solid #ed0233;
-  color: #ffffff;
+  background-color: #ffffff;
+  color: #102654;
 }
 
-.free-class__btn:focus-visible {
-  outline: none;
+.free-class__btn:disabled {
+  opacity: 0.3s;
+}
+
+.is-invalid .free-class__label input {
+  border-color: #ed0233;
+}
+
+.is-invalid span {
+  color: #ed0233;
 }
 
 .slider-control__button {
@@ -3518,12 +3576,12 @@ button,
 
 .slider-control.is-reviews .swiper-button-prev {
   left: 3px;
-  top: 48%;
+  top: 62%;
 }
 
 .slider-control.is-reviews .swiper-button-next {
   right: 3px;
-  top: 48%;
+  top: 62%;
 }
 
 .accordion__wrapper p {
@@ -3620,8 +3678,9 @@ button,
   }
 
   .header-nav__phone {
-    margin-top: 0;
-    font-size: 18px;
+    margin-top: -4px;
+    font-size: 24px;
+    letter-spacing: 0.5px;
   }
 
   .footer {
@@ -3636,6 +3695,7 @@ button,
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
     justify-content: space-between;
+    gap: 20px;
     margin: 44px auto 47px;
   }
 
@@ -3779,6 +3839,15 @@ button,
     padding-bottom: 44px;
   }
 
+  .main-gym__block {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+  }
+
   .main-gym__photo {
     width: 678px;
     height: 345px;
@@ -3788,7 +3857,10 @@ button,
   .main-gym__video {
     position: absolute;
     bottom: 101px;
-    left: 251px;
+    left: 50%;
+    -webkit-transform: translate(-50%, 0);
+    -ms-transform: translate(-50%, 0);
+    transform: translate(-50%, 0);
     width: 266px;
     height: 167px;
   }
@@ -3839,7 +3911,6 @@ button,
   .subscription__list::after {
     bottom: 1px;
     width: 340px;
-    height: 1px;
     left: 50%;
     -webkit-transform: translate(-50%, 0);
     -ms-transform: translate(-50%, 0);
@@ -3897,10 +3968,10 @@ button,
   }
 
   .competition__wrap {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: row;
-    flex-direction: row;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr 1.32fr;
+    grid-template-columns: 1fr 1.32fr;
   }
 
   .competition__containter {
@@ -3998,6 +4069,12 @@ button,
     -webkit-box-align: start;
     -ms-flex-align: start;
     align-items: start;
+  }
+
+  .features__wrapper {
+    -ms-flex-item-align: start;
+    -ms-grid-row-align: start;
+    align-self: start;
   }
 
   .features__wrapper h4 {
@@ -4399,8 +4476,9 @@ button,
   }
 
   .header-nav__phone {
-    margin-top: -6px;
-    font-size: 20px;
+    margin-top: -10px;
+    font-size: 24px;
+    letter-spacing: 1.48px;
   }
 
   .footer__container {
@@ -4547,9 +4625,7 @@ button,
   }
 
   .subscription__list::after {
-    bottom: 1px;
-    width: 340px;
-    height: 1px;
+    height: 2px;
     left: 50%;
     -webkit-transform: translate(-50%, 0);
     -ms-transform: translate(-50%, 0);
@@ -4558,10 +4634,8 @@ button,
 
   .subscription__sub-list {
     display: none;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: row;
-    flex-direction: row;
+    -ms-grid-columns: (1fr)[3];
+    grid-template-columns: repeat(3, 1fr);
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     justify-content: center;
@@ -4570,9 +4644,8 @@ button,
   }
 
   .subscription__sub-list.is-active {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+    display: -ms-grid;
+    display: grid;
   }
 
   .subscription__sub-item {
@@ -4590,13 +4663,6 @@ button,
   .competition__wrapper h4 {
     font-size: 18px;
     padding-bottom: 50px;
-  }
-
-  .competition__wrap {
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: row;
-    flex-direction: row;
   }
 
   .competition__containter {
@@ -4704,7 +4770,7 @@ button,
   .features__wrapper h4 {
     font-size: 71px;
     font-weight: 700;
-    margin-top: -13px;
+    margin-top: 3px;
   }
 
   .features__wrap h4 {
@@ -4864,7 +4930,7 @@ button,
 
   .reviews {
     padding-top: 120px;
-    padding-bottom: 104px;
+    padding-bottom: 119px;
   }
 
   .reviews h2 {
