--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -19,7 +19,7 @@
   }
 
   @media (min-width: $vp-1200) {
-    padding: 56px 30px 57px 120px;
+    padding: 56px 30px 62px 120px;
   }
 }
 
@@ -114,6 +114,15 @@
     @media (min-width: $vp-1200) {
       font-size: 14px;
     }
+
+    &:hover,
+    &:focus-visible {
+      opacity: 0.3;
+    }
+
+    &:active {
+      opacity: 0.7;
+    }
   }
 }
 
@@ -126,7 +135,7 @@
 
   a {
     display: block;
-    width: 100px;
+    width: 120px;
   }
 }
 
