--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -1,6 +1,6 @@
 .footer {
   background-color: $footer-color;
-  padding-top: 50px;
+  padding-top: 54px;
   padding-bottom: 52px;
 
   @media (min-width: $vp-768) {
@@ -14,11 +14,15 @@
     display: flex;
     justify-content: space-between;
     gap: 20px;
-    margin: 44px auto 47px;
+    margin: 46px auto 28px;
   }
 }
 
 .footer__container {
+  display: block;
+  column-count: 2;
+  column-gap: 30px;
+
   @media (min-width: $vp-768) {
     display: flex;
     justify-content: space-between;
@@ -34,14 +38,16 @@
 
 .footer__logo {
   display: inline-block;
-  padding-bottom: 14px;
+  padding-bottom: 11px;
 
   &:hover {
     opacity: 0.3;
   }
 
   @media (min-width: $vp-768) {
+    align-self: start;
     padding: 0;
+    padding-top: 5px;
   }
 }
 
@@ -74,33 +80,29 @@
 .footer__list {
   margin: 0;
   padding: 0;
-  display: flex;
-  flex-direction: column;
-  gap: 14px;
-  flex-wrap: wrap;
+  display: block;
   list-style-type: none;
-
-  &:last-of-type {
-    margin-top: -38px;
-  }
 
   @media (min-width: $vp-768) {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-    gap: 30px;
-
-    &:last-of-type {
-      margin-top: 0;
-    }
+    flex-wrap: wrap;
+    gap: 10px 30px;
   }
 
   @media (min-width: $vp-1200) {
-    gap: 40px;
+    gap: 10px 40px;
+    margin-top: -5px;
+
+    &:last-of-type {
+      margin-top: -5px;
+    }
   }
 }
 
 .footer__item {
+  margin-bottom: 16px;
+
   & a {
     display: inline-block;
     color: $color-default-white;
@@ -138,16 +140,22 @@
 .footer__social {
   margin: 0;
   padding: 0;
-  padding-top: 34px;
+  padding-top: 15px;
   list-style-type: none;
   display: flex;
-  flex-wrap: wrap;
   gap: 11px;
 
   @media (min-width: $vp-768) {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
     padding-top: 0;
     align-self: center;
     justify-content: space-between;
+    margin-top: -11px;
+  }
+
+  @media (min-width: $vp-1200) {
+    margin-top: -22px;
   }
 }
 
