--- a/source/sass/blocks/gym.scss
+++ b/source/sass/blocks/gym.scss
@@ -146,8 +146,8 @@
   position: relative;
   left: 50%;
   transform: translate(-50%, 0);
-  width: 320px;
-  height: 228px;
+  width: 100vw;
+  height: auto;
 
   @media (min-width: $vp-768) {
     position: absolute;
@@ -194,7 +194,8 @@
   position: relative;
 
   img {
-    height: 167px;
+    width: 100vw;
+    height: auto;
   }
 
   &::after {
@@ -242,9 +243,13 @@
   }
 
   &:hover,
-  &:focus,
-  &:active {
+  &:focus {
+    outline: none;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' fill='none'%3E%3Ccircle cx='50' cy='50' r='49' stroke='%23102654' stroke-width='2'/%3E%3Ccircle cx='50' cy='50' r='36' fill='white'/%3E%3Cpath d='M59 49.5L46.25 56.8612L46.25 42.1388L59 49.5Z' fill='%23102654'/%3E%3C/svg%3E");
+  }
+
+  &:active {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' fill='none'%3E%3Ccircle cx='50' cy='50' r='49' stroke='%23102654' stroke-width='2'/%3E%3Ccircle cx='50' cy='50' r='29' fill='white'/%3E%3Cpath d='M59 49.5L46.25 56.8612L46.25 42.1388L59 49.5Z' fill='%23102654'/%3E%3C/svg%3E");
   }
 
   &:disabled {
