--- a/source/sass/blocks/trainers.scss
+++ b/source/sass/blocks/trainers.scss
@@ -11,7 +11,7 @@
   }
 
   h2 {
-    color: $price;
+    color: $gym-color;
     padding: 0;
     margin: 0 auto;
     font-family: "Alumni Sans", "Arial", sans-serif;
