--- a/css/style.css
+++ b/css/style.css
@@ -1579,10 +1579,6 @@ button,
   pointer-events: none;
 }
 
-.btn.focus-visible:focus {
-  opacity: 0.8;
-}
-
 .modal {
   position: fixed;
   top: 0;
@@ -1731,18 +1727,38 @@ button,
   line-height: normal;
   letter-spacing: 0.4px;
   margin-top: -2px;
-  width: 155px;
+  width: 115px;
+}
+
+.header-nav__phone:hover,
+.header-nav__phone:focus-visible {
+  outline: none;
+  opacity: 0.3;
+}
+
+.header-nav__phone:active {
+  opacity: 0.7;
 }
 
 .footer {
   background-color: #030a1a;
-  padding-top: 50px;
+  padding-top: 54px;
   padding-bottom: 52px;
+}
+
+.footer__container {
+  display: block;
+  -webkit-column-count: 2;
+  -moz-column-count: 2;
+  column-count: 2;
+  -webkit-column-gap: 30px;
+  -moz-column-gap: 30px;
+  column-gap: 30px;
 }
 
 .footer__logo {
   display: inline-block;
-  padding-bottom: 14px;
+  padding-bottom: 11px;
 }
 
 .footer__logo:hover {
@@ -1759,21 +1775,12 @@ button,
 .footer__list {
   margin: 0;
   padding: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  gap: 14px;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
+  display: block;
   list-style-type: none;
 }
 
-.footer__list:last-of-type {
-  margin-top: -38px;
+.footer__item {
+  margin-bottom: 16px;
 }
 
 .footer__item a {
@@ -1809,13 +1816,11 @@ button,
 .footer__social {
   margin: 0;
   padding: 0;
-  padding-top: 34px;
+  padding-top: 15px;
   list-style-type: none;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
   gap: 11px;
 }
 
@@ -1943,6 +1948,7 @@ button,
 
 .main-banner__button:hover,
 .main-banner__button:focus-visible {
+  outline: none;
   color: #103aae;
   background-color: #ffffff;
 }
@@ -2016,8 +2022,8 @@ button,
   -webkit-transform: translate(-50%, 0);
   -ms-transform: translate(-50%, 0);
   transform: translate(-50%, 0);
-  width: 320px;
-  height: 228px;
+  width: 100vw;
+  height: auto;
 }
 
 .main-gym__video iframe {
@@ -2033,7 +2039,8 @@ button,
 }
 
 .main-gym__video-img img {
-  height: 167px;
+  width: 100vw;
+  height: auto;
 }
 
 .main-gym__video-img::after {
@@ -2069,9 +2076,13 @@ button,
 }
 
 .main-gym__video-btn:hover,
-.main-gym__video-btn:focus,
-.main-gym__video-btn:active {
+.main-gym__video-btn:focus {
+  outline: none;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' fill='none'%3E%3Ccircle cx='50' cy='50' r='49' stroke='%23102654' stroke-width='2'/%3E%3Ccircle cx='50' cy='50' r='36' fill='white'/%3E%3Cpath d='M59 49.5L46.25 56.8612L46.25 42.1388L59 49.5Z' fill='%23102654'/%3E%3C/svg%3E");
+}
+
+.main-gym__video-btn:active {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100' height='100' viewBox='0 0 100 100' fill='none'%3E%3Ccircle cx='50' cy='50' r='49' stroke='%23102654' stroke-width='2'/%3E%3Ccircle cx='50' cy='50' r='29' fill='white'/%3E%3Cpath d='M59 49.5L46.25 56.8612L46.25 42.1388L59 49.5Z' fill='%23102654'/%3E%3C/svg%3E");
 }
 
 .main-gym__video-btn:disabled {
@@ -2119,14 +2130,17 @@ button,
 
 .subscription__list {
   position: relative;
+  left: 50%;
+  -webkit-transform: translate(-50%, 0);
+  -ms-transform: translate(-50%, 0);
+  transform: translate(-50%, 0);
   padding: 0;
   margin: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  margin-left: auto;
+  margin-right: auto;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   gap: 45px;
@@ -2140,7 +2154,7 @@ button,
 .subscription__list::after {
   content: "";
   position: absolute;
-  bottom: 1px;
+  bottom: -3px;
   width: 290px;
   height: 2px;
   left: 50%;
@@ -2166,6 +2180,23 @@ button,
   transition: 0.3s ease;
 }
 
+.subscription__tab:focus-visible,
+.subscription__tab:hover {
+  outline: none;
+  color: #102654;
+}
+
+.subscription__tab:focus-visible::after,
+.subscription__tab:hover::after {
+  content: "";
+  position: absolute;
+  bottom: -15px;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #d10a42;
+}
+
 .subscription__tab.is-active {
   color: #102654;
 }
@@ -2173,7 +2204,7 @@ button,
 .subscription__tab.is-active::after {
   content: "";
   position: absolute;
-  bottom: -11px;
+  bottom: -15px;
   left: 0;
   width: 100%;
   height: 2px;
@@ -2209,11 +2240,29 @@ button,
 
 .subscription__sub-item:hover,
 .subscription__sub-item:focus {
+  border: 7px solid #102654;
+}
+
+.subscription__sub-item:hover .subscription__sub-button,
+.subscription__sub-item:focus .subscription__sub-button {
+  border-color: #102654;
+  outline: none;
+}
+
+.subscription__sub-item:active {
   border: 7px solid;
   -o-border-image: linear-gradient(90deg, #d10a42, #00359f);
   border-image: -webkit-gradient(linear, left top, right top, from(#d10a42), to(#00359f));
   border-image: linear-gradient(90deg, #d10a42, #00359f);
   border-image-slice: 1;
+}
+
+.subscription__sub-item:active .subscription__sub-button {
+  border: none;
+  padding: 26px 45px;
+  color: #ffffff;
+  background: -webkit-gradient(linear, left top, right top, from(#d10a42), to(#00359f));
+  background: linear-gradient(90deg, #d10a42, #00359f);
 }
 
 .subscription__sub-item h3 {
@@ -2298,7 +2347,7 @@ button,
   letter-spacing: 0.6px;
   text-transform: uppercase;
   color: #102654;
-  border: 2px solid #102654;
+  border: 2px solid rgba(16, 38, 84, 0.2);
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -2307,16 +2356,16 @@ button,
 
 .subscription__sub-button:hover,
 .subscription__sub-button:focus-visible {
-  border: none;
+  border-color: #102654;
   outline: none;
+}
+
+.subscription__sub-button:active {
+  border: none;
   padding: 26px 45px;
   color: #ffffff;
   background: -webkit-gradient(linear, left top, right top, from(#d10a42), to(#00359f));
   background: linear-gradient(90deg, #d10a42, #00359f);
-}
-
-.subscription__sub-button:active {
-  color: rgba(255, 255, 255, 0.5);
 }
 
 .subscription__sub-button:disabled {
@@ -2466,16 +2515,16 @@ button,
 .competition__link:focus-visible {
   outline: none;
   background-color: #ffffff;
-  color: #ed0233;
+  color: #103aae;
 }
 
 .competition__link:active {
   background-color: #ffffff;
-  color: #d10a42;
+  color: #102654;
 }
 
 .competition__link:disabled {
-  opacity: 0.3s;
+  opacity: 0.3;
 }
 
 .competition__image {
@@ -2509,7 +2558,7 @@ button,
 }
 
 .trainers h2 {
-  color: #103aae;
+  color: #102654;
   padding: 0;
   margin: 0 auto;
   font-family: "Alumni Sans", "Arial", sans-serif;
@@ -2654,7 +2703,7 @@ button,
 .features h2 {
   margin: 0;
   padding: 0;
-  color: #103aae;
+  color: #102654;
   font-family: "Alumni Sans", "Arial", sans-serif;
   line-height: normal;
   text-align: center;
@@ -2701,7 +2750,7 @@ button,
   font-size: 58px;
   font-weight: 700;
   line-height: 90%;
-  background: linear-gradient(129deg, #d10a42 0%, #0041ca 100%);
+  background: linear-gradient(129deg, #d10a42 0%, #0041ca 60%);
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -2768,7 +2817,6 @@ button,
 .features__wrap--center h4 {
   color: #ffffff;
   text-align: center;
-  letter-spacing: 1px;
   margin: 0;
   padding: 0;
   font-size: 20px;
@@ -2916,6 +2964,11 @@ button,
   outline-offset: 10px;
 }
 
+.promo__red-link:active {
+  opacity: 1;
+  color: #ffffff;
+}
+
 .promo__photo {
   display: block;
 }
@@ -3003,6 +3056,11 @@ button,
   outline-offset: 10px;
 }
 
+.promo__block-link:active {
+  opacity: 1;
+  color: #1c3374;
+}
+
 .faq {
   background-color: #f8f9fc;
   margin: 0 auto;
@@ -3026,7 +3084,7 @@ button,
 }
 
 .faq__title {
-  color: #103aae;
+  color: #102654;
   font-family: "Alumni Sans", "Arial", sans-serif;
   font-weight: 600;
   line-height: normal;
@@ -3069,6 +3127,7 @@ button,
 
 .faq__tab:hover,
 .faq__tab:focus-visible {
+  outline: none;
   border-color: #102654;
 }
 
@@ -3102,20 +3161,13 @@ button,
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 32 32' fill='none'%3E%3Ccircle cx='16' cy='16' r='15.5' fill='%231C3374' stroke='%231C3374'/%3E%3Cpath d='M22 16H16H10' stroke='white'/%3E%3C/svg%3E");
 }
 
-.faq__acc-wrap {
+.faq__acc-button {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
   -ms-flex-pack: justify;
   justify-content: space-between;
-  -webkit-box-align: end;
-  -ms-flex-align: end;
-  align-items: end;
-}
-
-.faq__acc-button {
-  display: inline-block;
   position: relative;
   margin: 0;
   padding: 0;
@@ -3124,16 +3176,14 @@ button,
   padding-top: 18px;
   letter-spacing: 0.1px;
   text-align: start;
-  width: 78%;
+  width: 100%;
   font-size: 18px;
   font-weight: 500;
   line-height: 120%;
 }
 
-.faq__acc-button span {
-  margin: 0;
-  display: block;
-  width: 254px;
+.faq__acc-button span:first-of-type {
+  width: 250px;
 }
 
 .faq__acc-click {
@@ -3142,12 +3192,15 @@ button,
   -ms-flex-item-align: center;
   -ms-grid-row-align: center;
   align-self: center;
+  cursor: pointer;
   margin-bottom: -18px;
+  background: no-repeat;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 32 32' fill='none'%3E%3Ccircle cx='16' cy='16' r='15.5' stroke='%231C3374'/%3E%3Cpath d='M16 10V16M16 22V16M16 16H22M16 16H10' stroke='%231C3374'/%3E%3C/svg%3E");
 }
 
 .faq__acc-click:hover,
 .faq__acc-click:focus {
+  outline: none;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 32 32' fill='none'%3E%3Ccircle cx='16' cy='16' r='15.5' fill='%23102654'/%3E%3Cpath d='M16 10V16M16 22V16M16 16H22M16 16H10' stroke='white'/%3E%3C/svg%3E");
 }
 
@@ -3306,6 +3359,18 @@ button,
   color: #102654;
 }
 
+.contacts__item p:hover,
+.contacts__item p:focus-visible,
+.contacts__item a:hover,
+.contacts__item a:focus-visible {
+  opacity: 0.3;
+}
+
+.contacts__item p:active,
+.contacts__item a:active {
+  opacity: 0.7;
+}
+
 .contacts__item-phone {
   -webkit-box-ordinal-group: 4;
   -ms-flex-order: 3;
@@ -3314,7 +3379,7 @@ button,
 
 .contacts__item-phone a {
   display: block;
-  width: 100px;
+  width: 120px;
 }
 
 .contacts__item-email {
@@ -3367,6 +3432,7 @@ button,
 
 .free-class__input-wrapper div {
   width: 100%;
+  position: relative;
 }
 
 .free-class__label {
@@ -3499,7 +3565,7 @@ button,
 }
 
 .free-class__btn:disabled {
-  opacity: 0.3s;
+  opacity: 0.3;
 }
 
 .is-invalid .free-class__label input {
@@ -3507,6 +3573,11 @@ button,
 }
 
 .is-invalid span {
+  position: absolute;
+  width: 100%;
+  height: auto;
+  bottom: -22px;
+  left: 0;
   color: #ed0233;
 }
 
@@ -3671,6 +3742,12 @@ button,
   }
 */
 
+@media (min-width: 375px) {
+  .faq__acc-button span:first-of-type {
+    width: 300px;
+  }
+}
+
 @media (min-width: 768px) {
   .header-nav {
     padding-top: 40px;
@@ -3685,6 +3762,7 @@ button,
     margin-top: -4px;
     font-size: 24px;
     letter-spacing: 0.5px;
+    width: 155px;
   }
 
   .footer {
@@ -3700,7 +3778,7 @@ button,
     -ms-flex-pack: justify;
     justify-content: space-between;
     gap: 20px;
-    margin: 44px auto 47px;
+    margin: 46px auto 28px;
   }
 
   .footer__container {
@@ -3717,7 +3795,11 @@ button,
   }
 
   .footer__logo {
+    -ms-flex-item-align: start;
+    -ms-grid-row-align: start;
+    align-self: start;
     padding: 0;
+    padding-top: 5px;
   }
 
   .footer__logo-img {
@@ -3737,14 +3819,9 @@ button,
     -webkit-box-direction: normal;
     -ms-flex-direction: row;
     flex-direction: row;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-    gap: 30px;
-  }
-
-  .footer__list:last-of-type {
-    margin-top: 0;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    gap: 10px 30px;
   }
 
   .footer__item a {
@@ -3752,13 +3829,17 @@ button,
   }
 
   .footer__social {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: (1fr)[3];
+    grid-template-columns: repeat(3, 1fr);
     padding-top: 0;
-    -ms-flex-item-align: center;
     -ms-grid-row-align: center;
     align-self: center;
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
     justify-content: space-between;
+    margin-top: -11px;
   }
 
   .main-banner {
@@ -3915,7 +3996,7 @@ button,
 
   .subscription__list::after {
     bottom: 1px;
-    width: 340px;
+    width: 100%;
     left: 50%;
     -webkit-transform: translate(-50%, 0);
     -ms-transform: translate(-50%, 0);
@@ -3924,6 +4005,24 @@ button,
 
   .subscription__tab {
     font-size: 20px;
+  }
+
+  .subscription__tab:focus-visible,
+  .subscription__tab:hover {
+    color: #102654;
+  }
+
+  .subscription__tab:focus-visible::after,
+  .subscription__tab:hover::after {
+    bottom: -11px;
+  }
+
+  .subscription__tab.is-active {
+    color: #102654;
+  }
+
+  .subscription__tab.is-active::after {
+    bottom: -11px;
   }
 
   .subscription__sub-list {
@@ -4070,7 +4169,7 @@ button,
     -webkit-box-direction: normal;
     -ms-flex-direction: row;
     flex-direction: row;
-    gap: 30px;
+    gap: 0 30px;
     -webkit-box-align: start;
     -ms-flex-align: start;
     align-items: start;
@@ -4292,16 +4391,15 @@ button,
 
   .faq__acc-button {
     padding-top: 30px;
-    width: 90%;
     font-size: 24px;
   }
 
-  .faq__acc-button span {
-    width: auto;
+  .faq__acc-button span:first-of-type {
+    width: 500px;
   }
 
   .faq__acc-click {
-    margin-bottom: -29px;
+    margin-top: -19px;
     height: 42px;
     width: 42px;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='42' height='42' viewBox='0 0 42 42' fill='none'%3E%3Ccircle cx='21' cy='21' r='20.5' stroke='%231C3374'/%3E%3Cpath d='M21 12V21M21 30V21M21 21H30M21 21H12' stroke='%231C3374'/%3E%3C/svg%3E");
@@ -4314,7 +4412,7 @@ button,
 
   .reviews {
     padding-top: 92px;
-    padding-bottom: 101px;
+    padding-bottom: 79px;
   }
 
   .reviews h2 {
@@ -4473,6 +4571,12 @@ button,
   }
 }
 
+@media (min-width: 1024px) {
+  .faq__acc-button span:first-of-type {
+    width: auto;
+  }
+}
+
 @media (min-width: 1200px) {
   .header-nav__logo-img {
     margin-top: -10px;
@@ -4504,7 +4608,16 @@ button,
   }
 
   .footer__list {
-    gap: 40px;
+    gap: 10px 40px;
+    margin-top: -5px;
+  }
+
+  .footer__list:last-of-type {
+    margin-top: -5px;
+  }
+
+  .footer__social {
+    margin-top: -22px;
   }
 
   .main-banner {
@@ -4811,9 +4924,8 @@ button,
     text-align: center;
     color: #ffffff;
     padding-bottom: 30px;
-    letter-spacing: 2px;
-    font-size: 22px;
-    line-height: 170%;
+    font-size: 26px;
+    line-height: 150%;
   }
 
   .features__item--places {
@@ -4928,10 +5040,6 @@ button,
     gap: 8px;
   }
 
-  .faq__acc-button {
-    padding-top: 32px;
-  }
-
   .reviews {
     padding-top: 120px;
     padding-bottom: 119px;
@@ -4973,7 +5081,7 @@ button,
   }
 
   .contacts {
-    padding: 56px 30px 57px 120px;
+    padding: 56px 30px 62px 120px;
   }
 
   .contacts__title {
@@ -4998,7 +5106,7 @@ button,
   }
 
   .free-class {
-    padding: 56px 170px 62px 103px;
+    padding: 56px 170px 60px 103px;
   }
 
   .free-class h2 {
@@ -5092,11 +5200,5 @@ button,
 
   .modal--fit-content .modal__content {
     width: 100%;
-  }
-}
-
-@media (hover: hover) {
-  .btn:hover:not(.focus-visible) {
-    opacity: 0.8;
   }
 }
