--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -47,12 +47,14 @@
   font-style: normal;
   font-weight: 600;
   line-height: normal;
+  word-break: keep-all;
   letter-spacing: 0.4px;
   margin-top: -2px;
   width: 115px;
 
   @media (min-width: $vp-768) {
     margin-top: -4px;
+    margin-right: -15px;
     font-size: 24px;
     letter-spacing: 0.5px;
     width: 155px;
@@ -60,6 +62,7 @@
 
   @media (min-width: $vp-1200) {
     margin-top: -10px;
+    margin-right: 0;
     font-size: 24px;
     letter-spacing: 1.48px;
   }
