--- a/source/sass/blocks/free-class.scss
+++ b/source/sass/blocks/free-class.scss
@@ -103,7 +103,7 @@
       outline-offset: 5px;
 
       &::placeholder {
-        color: $color-default-white;
+        visibility: hidden;
       }
     }
 
