--- a/css/style.css
+++ b/css/style.css
@@ -3189,7 +3189,7 @@ button,
   -ms-grid-row-align: center;
   align-self: center;
   cursor: pointer;
-  margin-bottom: -18px;
+  margin-bottom: -2px;
   background: no-repeat;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 32 32' fill='none'%3E%3Ccircle cx='16' cy='16' r='15.5' stroke='%231C3374'/%3E%3Cpath d='M16 10V16M16 22V16M16 16H22M16 16H10' stroke='%231C3374'/%3E%3C/svg%3E");
 }
@@ -3493,27 +3493,27 @@ button,
 
 .free-class__label input:focus-visible::-webkit-input-placeholder,
 .free-class__label input:active::-webkit-input-placeholder {
-  color: #ffffff;
+  visibility: hidden;
 }
 
 .free-class__label input:focus-visible::-moz-placeholder,
 .free-class__label input:active::-moz-placeholder {
-  color: #ffffff;
+  visibility: hidden;
 }
 
 .free-class__label input:focus-visible:-ms-input-placeholder,
 .free-class__label input:active:-ms-input-placeholder {
-  color: #ffffff;
+  visibility: hidden;
 }
 
 .free-class__label input:focus-visible::-ms-input-placeholder,
 .free-class__label input:active::-ms-input-placeholder {
-  color: #ffffff;
+  visibility: hidden;
 }
 
 .free-class__label input:focus-visible::placeholder,
 .free-class__label input:active::placeholder {
-  color: #ffffff;
+  visibility: hidden;
 }
 
 .free-class__label input:disabled {
@@ -4392,6 +4392,7 @@ button,
 
   .faq__acc-click {
     margin-top: -19px;
+    margin-bottom: -18px;
     height: 42px;
     width: 42px;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='42' height='42' viewBox='0 0 42 42' fill='none'%3E%3Ccircle cx='21' cy='21' r='20.5' stroke='%231C3374'/%3E%3Cpath d='M21 12V21M21 30V21M21 21H30M21 21H12' stroke='%231C3374'/%3E%3C/svg%3E");
